@@ -1,3 +1,7 @@
+Tue Mar 15 12:49:21 CET 2005 Daniel Veillard <veillard@redhat.com>
+
+	* server/gam_poll.c: revisited the patch a bit.
+
 Tue Mar 15 12:32:02 CET 2005 Daniel Veillard <veillard@redhat.com>
 
 	* server/gam_tree.c: a bit of cleanup, and avoiding potentially
